klass-model-converters/klass-compiler/src/test/resources/errors/DuplicateServiceGroup.klass
package dummy

class DuplicateServiceGroup
{
}

service DuplicateServiceGroup
{
}

service DuplicateServiceGroup
{
}
